--- a/example/netflix-frontend-clone-master/login.html
+++ b/example/netflix-frontend-clone-master/login.html
@@ -34,7 +34,7 @@
         <header class="d-flex space-between middle-align">
            <a href="/">
             <img src="images/logo.png" height="50px" width="170px" alt="site logo main" style="margin: auto;"></img>
-        </a> 
+        </a>
         </header>
         <section id="login-form-section">
             <!--Login form start-->
@@ -93,3 +93,9 @@
 </body>
 
 </html>
+
+
+Category::create([
+    'name' => 'Action'
+])
+
